# citra

./: .gitattributes  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml  updater-ubuntu-18.04.sh
.github/: ISSUE_TEMPLATE.md
.travis/clang-format/: script.sh
.travis/common/: travis-ci.env
.travis/linux/: upload.sh
.travis/linux-frozen/: docker.sh
.travis/linux-mingw/: docker.sh  scan_dll.py
.travis/macos/: build.sh  deps.sh  upload.sh
CMakeModules/: CopyCitraQt5Deps.cmake  MinGWCross.cmake
src/: CMakeLists.txt
src/audio_core/: audio_types.h  codec.cpp  interpolate.cpp  interpolate.h  sink.cpp  sink.h  time_stretch.cpp  time_stretch.h
src/citra/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  app_list.cpp  app_list.h  app_list_p.h  app_list_worker.cpp  app_list_worker.h  bootmanager.cpp  bootmanager.h  cheats.cpp  cheats.h  cheats.ui  compatibility.h  control_panel.cpp  control_panel.h  control_panel.ui  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  hotkeys.h  hotkeys.ui  issues_map.h  main.cpp  main.h  main.ui  mii_selector.cpp  mii_selector.h  mii_selector.ui  program_list.cpp  program_list.h  program_list_p.h  program_list_worker.cpp  program_list_worker.h  swkbd.cpp  ui_settings.cpp  ui_settings.h
src/citra_qt/: bootmanager.cpp  bootmanager.h  main.cpp  ui_settings.h
src/common/: CMakeLists.txt  alignment.h  announce_multiplayer_room.h  assert.h  bit_field.h  bit_set.h  cityhash.cpp  cityhash.h  common_paths.h  common_types.h  (+18 more)
src/lobby/: CMakeLists.txt  api.cpp  api.h
(+501 files in other folders)
